fix align for numbered list

--- a/theme-one-dark.css
+++ b/theme-one-dark.css
@@ -231,6 +231,7 @@ footer {
 .post-content ol {
     margin-bottom: 1.5rem;
     margin-left: 2rem;
+    padding-left: 0.5rem;
 }
 
 .post-content li {
